Fix: CSS spacing after the navigation menu

--- a/src/themes/oscar/assets/css/common.css
+++ b/src/themes/oscar/assets/css/common.css
@@ -50,7 +50,6 @@ i, em {
 }
 
 .main {
-    margin-top: var(--spacing-6);
     padding: var(--spacing-3);
     @media (--screen-xs) {
         margin-top: var(--spacing-1);
